tmp/seed_error.txt
E:\developemet\projexts\bukonzemergency\node_modules\.pnpm\ts-node@10.9.2_@types+node@20.19.30_typescript@5.9.3\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
scripts/e2e-testing-seed-v2.ts(495,28): error TS18048: 'sType' is possibly 'undefined'.

    at createTSError (E:\developemet\projexts\bukonzemergency\node_modules\.pnpm\ts-node@10.9.2_@types+node@20.19.30_typescript@5.9.3\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (E:\developemet\projexts\bukonzemergency\node_modules\.pnpm\ts-node@10.9.2_@types+node@20.19.30_typescript@5.9.3\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (E:\developemet\projexts\bukonzemergency\node_modules\.pnpm\ts-node@10.9.2_@types+node@20.19.30_typescript@5.9.3\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (E:\developemet\projexts\bukonzemergency\node_modules\.pnpm\ts-node@10.9.2_@types+node@20.19.30_typescript@5.9.3\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (E:\developemet\projexts\bukonzemergency\node_modules\.pnpm\ts-node@10.9.2_@types+node@20.19.30_typescript@5.9.3\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1893:10
    at Object.require.extensions.<computed> [as .ts] (E:\developemet\projexts\bukonzemergency\node_modules\.pnpm\ts-node@10.9.2_@types+node@20.19.30_typescript@5.9.3\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 18048 ]
}
